--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,20 @@ uuid = "7bf6e793-a2ec-421f-8700-d1465381ee80"
 authors = ["mattsignorelli <mgs255@cornell.edu> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+BeamTracking = "8ef5c10a-4ca3-437f-8af5-b84d8af36df0"
+Beamlines = "5bb90b03-0719-46b8-8ce4-1ef3afd3cd4b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+GTPSA = "b27dd330-f138-47c5-815b-40db9dd9b6e8"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NonlinearNormalForm = "05e19671-dec8-4f15-984f-54eaa6ca64be"
+TPSAInterface = "575459ea-959c-4603-9b15-d63fb6693033"
+TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
+
 [compat]
+DataFrames = "1.7.0"
+LinearAlgebra = "1.11.0"
+TypedTables = "1.4.6"
 julia = "1.9"
 
 [extras]
