--- a/Project.toml
+++ b/Project.toml
@@ -4,24 +4,40 @@ authors = ["mattsignorelli <mgs255@cornell.edu> and contributors"]
 version = "1.0.0-DEV"
 
 [deps]
+AtomicAndPhysicalConstants = "5c0d271c-5419-4163-b387-496237733d8b"
 BeamTracking = "8ef5c10a-4ca3-437f-8af5-b84d8af36df0"
 Beamlines = "5bb90b03-0719-46b8-8ce4-1ef3afd3cd4b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DifferentiationInterface = "a0c0ee7d-e4b9-4e03-894e-1c5f64a51d63"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GTPSA = "b27dd330-f138-47c5-815b-40db9dd9b6e8"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
 NonlinearNormalForm = "05e19671-dec8-4f15-984f-54eaa6ca64be"
+Optimization = "7f7a1694-90dd-40f0-9382-eb1efda571ba"
+RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 TPSAInterface = "575459ea-959c-4603-9b15-d63fb6693033"
 TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
-BeamTracking = "0.2"
-Beamlines = "0.4"
+AtomicAndPhysicalConstants = "0.7.1"
+BeamTracking = "0.3.1"
+Beamlines = "0.6"
 DataFrames = "1.7.0"
+DifferentiationInterface = "0.7.4"
+ForwardDiff = "0.10,1"
 GTPSA = "1.4.7"
-NonlinearNormalForm = "0.2"
+NLsolve = "4.5.1"
+NonlinearNormalForm = "0.3.1"
+Optimization = "4.5.0"
+RecursiveArrayTools = "3.36.0"
+Reexport = "1.2.2"
+StaticArrays = "1.9.14"
 TPSAInterface = "0.2"
 TypedTables = "1.4.6"
-julia = "1.9"
+julia = "1.10"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
