--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "SciBmad"
 uuid = "7bf6e793-a2ec-421f-8700-d1465381ee80"
 authors = ["mattsignorelli <mgs255@cornell.edu> and contributors"]
-version = "1.0.0-DEV"
+version = "0.1.0"
 
 [deps]
 AtomicAndPhysicalConstants = "5c0d271c-5419-4163-b387-496237733d8b"
