--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.3.0"
 AtomicAndPhysicalConstants = "5c0d271c-5419-4163-b387-496237733d8b"
 BeamTracking = "8ef5c10a-4ca3-437f-8af5-b84d8af36df0"
 Beamlines = "5bb90b03-0719-46b8-8ce4-1ef3afd3cd4b"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 DifferentiationInterface = "a0c0ee7d-e4b9-4e03-894e-1c5f64a51d63"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GTPSA = "b27dd330-f138-47c5-815b-40db9dd9b6e8"
@@ -21,7 +22,7 @@ TypedTables = "9d95f2ec-7b3d-5a63-8d20-e2491e220bb9"
 
 [compat]
 AtomicAndPhysicalConstants = "0.8.2"
-BeamTracking = "0.5.1"
+BeamTracking = "0.5.2"
 Beamlines = "0.8.2"
 DifferentiationInterface = "0.7.4"
 ForwardDiff = "0.10,1"
